reverted Java upgrade